--- a/src/main/resources/lang/shieldmod/en_US.lang
+++ b/src/main/resources/lang/shieldmod/en_US.lang
@@ -1,17 +1,17 @@
 item.shieldmod.leather.shield.name=Leather Shield
-item.shieldmod.leather.shield.desc=A tool to block and knockback enemies!
+item.shieldmod.leather.shield.desc=A tool to block and bounce back enemies.
 item.shieldmod.wooden.shield.name=Wooden Shield
-item.shieldmod.wooden.shield.desc=A tool to block and knockback enemies!
+item.shieldmod.wooden.shield.desc=A tool to block and deal knockback.
 item.shieldmod.stone.shield.name=Stone Shield
-item.shieldmod.stone.shield.desc=A tool to block and knockback enemies!
+item.shieldmod.stone.shield.desc=A tool to block and deal knockback.
 item.shieldmod.iron.shield.name=Iron Shield
-item.shieldmod.iron.shield.desc=A tool to block and knockback enemies!
+item.shieldmod.iron.shield.desc=A tool to block and deal knockback.
 item.shieldmod.gold.shield.name=Gold Shield
-item.shieldmod.gold.shield.desc=A tool to block and knockback enemies!
+item.shieldmod.gold.shield.desc=A tool to block and return damage to enemies.
 item.shieldmod.diamond.shield.name=Diamond Shield
-item.shieldmod.diamond.shield.desc=A tool to block and knockback enemies!
+item.shieldmod.diamond.shield.desc=A rare and pretty shield.
 item.shieldmod.steel.shield.name=Steel Shield
-item.shieldmod.steel.shield.desc=A tool to block and knockback enemies!
+item.shieldmod.steel.shield.desc=A tool to block and set enemies on fire.
 item.shieldmod.armor.helmet.leather.name=Leather Cap
 item.shieldmod.armor.helmet.leather.desc=A hat made from a cow's hide
 item.shieldmod.armor.chestplate.leather.name=Leather Tunic
