--- a/src/main/resources/lang/shieldmod/en_US.lang
+++ b/src/main/resources/lang/shieldmod/en_US.lang
@@ -31,9 +31,9 @@ achievement.shieldmod.shield.got.desc=Use planks and a log to make a shield
 achievement.shieldmod.modern.age=The Modern Age
 achievement.shieldmod.modern.age.desc=Obtain a Steel Shield
 achievement.shieldmod.fly.high=Fly High
-achievement.shieldmod.fly.high.desc=Knock an enemy into the air!
+achievement.shieldmod.fly.high.desc=Knock an attacker into the air!
 achievement.shieldmod.gold.retal=Golden Retaliation
-achievement.shieldmod.gold.retal.desc=Send damage back to an enemy
+achievement.shieldmod.gold.retal.desc=Send damage back to an attacker
 achievement.shieldmod.colorful.world=Colorful World
 achievement.shieldmod.colorful.world.desc=Obtain a dyed shield or armor
 
