--- a/src/main/resources/lang/shieldmod/en_US.lang
+++ b/src/main/resources/lang/shieldmod/en_US.lang
@@ -17,7 +17,7 @@ item.shieldmod.tear.shield.name=Tearstone Shield
 item.shieldmod.tear.shield.desc=A throwable frozen shield that boosts defense when close to death.
 
 item.shieldmod.food.stew.pumpkin.name=Pumpkin Stew
-item.shieldmod.food.stew.pumpkin.desc=So hearty... tasty!
+item.shieldmod.food.stew.pumpkin.desc=Hearty... tasty!
 
 
 item.shieldmod.armor.helmet.leather.name=Leather Cap
