--- a/src/main/resources/lang/shieldmod/en_US.lang
+++ b/src/main/resources/lang/shieldmod/en_US.lang
@@ -7,11 +7,11 @@ item.shieldmod.stone.shield.desc=A crumbling stone shield.
 item.shieldmod.iron.shield.name=Iron Shield
 item.shieldmod.iron.shield.desc=A shield that turns your skin into iron.
 item.shieldmod.gold.shield.name=Gold Shield
-item.shieldmod.gold.shield.desc=Send projectiles back to monsters with this golden shield!
+item.shieldmod.gold.shield.desc=Send projectiles back with this golden shield!
 item.shieldmod.diamond.shield.name=Diamond Shield
 item.shieldmod.diamond.shield.desc=A rare and pretty shield.
 item.shieldmod.steel.shield.name=Steel Shield
-item.shieldmod.steel.shield.desc=A comically large steel fire striker
+item.shieldmod.steel.shield.desc=A comically large steel fire striker.
 item.shieldmod.tear.shield.name=Tearstone Shield
 item.shieldmod.tear.shield.desc=A throwable frozen shield that boosts defense when close to death.
 item.shieldmod.food.stew.pumpkin.name=Pumpkin Stew
